Fixed town-detail card image size where it was too big on some municipios

--- a/src/app/town/town-detail/town-detail.component.scss
+++ b/src/app/town/town-detail/town-detail.component.scss
@@ -20,6 +20,12 @@
     min-height: 30vh;
 }
 
+.wiki-card {
+  width: 100%;
+  height: 42.7vh;
+  object-fit: cover;
+}
+
 .link-text{
     text-decoration: none;
     color: black;
